# scatterkit

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  index.html  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug.md
.github/workflows/: build.yml  docs.yml  lint.yml  readthedocs-link.yml  tests-dev.yml  tests.yml
developer/: check_changelog.py  clean_tempfiles.sh
docs/src/: conf.py  contributors.rst  index.rst
docs/src/analysis-modules/: index.rst  rdfdiporder.rst  saxs.rst
docs/src/api-documentation/: lib.rst  math.rst
docs/src/concepts-explanations/: index.rst  qens.rst  saxs.rst
docs/src/get-started/: index.rst  usage-python.rst
examples/: README.rst  dipole-correlations.py  saxs.py  usage-bash.sh
latest/: .buildinfo  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
latest/_downloads/230d2f5370d03662add2a274fc38dce8/: dipole-correlations.py
latest/_downloads/8d5ce95a24d28933092964c4d515b149/: dipole-correlations.ipynb
latest/_downloads/f168cfc11b0968cad69e1bd5751287c7/: water_nvt.tpr
latest/_downloads/f4c1610fd524ce45cd864108b3c06193/: saxs.ipynb
latest/_modules/: index.html
latest/_modules/scatterkit/: diporderstructurefactor.html  rdfdiporder.html  saxs.html
latest/_modules/scatterkit/lib/: math.html  tables.html  util.html
latest/_sources/: index.rst.txt  sg_execution_times.rst.txt
latest/_sources/analysis-modules/: index.rst.txt
latest/_sources/api-documentation/: lib.rst.txt  math.rst.txt  tables.rst.txt
latest/_sources/examples/: dipole-correlations.rst.txt  index.rst.txt  saxs.rst.txt  sg_execution_times.rst.txt
latest/_sources/get-started/: index.rst.txt  scatterkit.rst.txt
latest/analysis-modules/: diporderstructurefactor.html  index.html  rdfdiporder.html  saxs.html
latest/api-documentation/: index.html  lib.html  math.html  tables.html  util.html
latest/concepts-explanations/: index.html  saxs.html
latest/examples/: dipole-correlations.html  index.html  saxs.html  sg_execution_times.html  usage-bash.html
latest/get-started/: changelog.html  index.html  installation.html  scatterkit.html  units.html  usage-python.html
src/scatterkit/: __init__.py  __main__.py  _version.py  diporderstructurefactor.py  rdfdiporder.py  saxs.py
src/scatterkit/lib/: __init__.py  _cmath.pyx  math.py  util.py  weights.py
src/scatterkit/modules/: __init__.py  saxs.py
stable/: .buildinfo  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
stable/_downloads/8d5ce95a24d28933092964c4d515b149/: dipole-correlations.ipynb
stable/_downloads/b665bb243941862830cc34fbbba92cf8/: water_nvt.xtc
stable/_downloads/f4c1610fd524ce45cd864108b3c06193/: saxs.ipynb
stable/_modules/: index.html
stable/_modules/scatterkit/: diporderstructurefactor.html  rdfdiporder.html  saxs.html
stable/_modules/scatterkit/lib/: math.html  tables.html  util.html
stable/_sources/: sg_execution_times.rst.txt
stable/_sources/analysis-modules/: diporderstructurefactor.rst.txt  saxs.rst.txt
stable/_sources/api-documentation/: index.rst.txt  util.rst.txt
stable/_sources/examples/: dipole-correlations.rst.txt  index.rst.txt  saxs.rst.txt  sg_execution_times.rst.txt  usage-bash.rst.txt
stable/_sources/get-started/: units.rst.txt
stable/analysis-modules/: diporderstructurefactor.html  index.html  rdfdiporder.html  saxs.html
stable/api-documentation/: index.html  lib.html  math.html  tables.html  util.html
stable/concepts-explanations/: index.html
stable/examples/: dipole-correlations.html  index.html  saxs.html  sg_execution_times.html  usage-bash.html
stable/get-started/: changelog.html  index.html  installation.html  scatterkit.html  units.html  usage-python.html
tests/: requirements.txt  test_diporderstructurefactor.py  test_rdfdiporder.py  util.py
tests/data/: __init__.py
tests/lib/: test_math.py  test_util.py  test_weights.py
tests/modules/: test_saxs.py
